--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,12 @@ header p {
     margin:0;
 }
 
+.row{
+  display: grid;
+  /* grid-template-columns: repeat(2, minmax(320px, 1fr)); */
+  gap: 24px;
+}
+
 .tab {
     margin-left: 40px;
 }
