--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,16 @@ header p {
   gap: 24px;
 }
 
+a.inline{
+    color: #6ee7f5;
+    text-underline-offset: 3px;
+    text-decoration: none;
+    border-bottom: 1px dashed transparent;
+}
+a.inline:hover{ 
+    border-bottom-color: currentColor 
+}
+
 .tab {
     margin-left: 40px;
 }
